# course_work/distributed_system/swagger.json
@@ -183,14 +183,7 @@
             }
           },
           "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/WorldResp"
-                }
-              }
-            }
+            "description": "OK"
           }
         }
       }
